--- a/config/database.yml
+++ b/config/database.yml
@@ -5,27 +5,21 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
+  adapter: sqlite3
   pool: 5
   timeout: 5000
 
 development:
-  adapter: postgresql
-  database: camstagram_development
-  pool: 5
-  timeout: 5000
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: camstagram_test
-  pool: 5
-  timeout: 5000
+  <<: *default
+  database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  database: camstagram_production
-  pool: 5
-  timeout: 5000
+  <<: *default
+  database: db/production.sqlite3
